--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "type": "module",
   "name": "handlebars-poc",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon src/app.js",
-    "dev:debug": "DEBUG=express:* node src/app.js",
-    "start": "NODE_ENV=production node src/app.js"
+    "dev": "nodemon src/app.ts",
+    "dev:debug": "DEBUG=express:* nodemon src/app.ts",
+    "start": "NODE_ENV=production node dist/src/app.js",
+    "build": "tsc",
+    "lint": "eslint ."
   },
   "keywords": [
     "webapp",
@@ -24,9 +25,15 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.3",
     "@types/sqlite3": "^3.1.8",
-    "nodemon": "^2.0.21"
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
